--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: El blog de Nowis
 description: Información sobre cosas
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: sstandre/sstandre/master/images/logo.png
+avatar: https://raw.githubusercontent.com/sstandre/sstandre/master/images/logo.png
 
 #
 # Flags below are optional
